Fixups for OSP10
On OSP10 the undercloud_nameservers option wasn't present. Also
the undercloud can have versions of RHEL7 which don't have the
platform-python.

Change-Id: Ic7dec81d4ef0b9c7903da121f474cea644f4568b

--- a/plugins/tripleo-undercloud/post.yml
+++ b/plugins/tripleo-undercloud/post.yml
@@ -31,6 +31,11 @@
       when:
         - "'vqfx-0' in hostvars"
         - "install.version is defined"
+    - name: Set ctlplane nameservers on OSP<11
+      shell: source ~/stackrc; openstack subnet set $( openstack network show ctlplane -c subnets -f value ) --dns-nameserver "{{ undercloud_nameservers }}"
+      when:
+        - install.version|openstack_release < 11
+        - undercloud_nameservers != ""
   handlers:
     - name: restart ironic conductor container
       command: docker restart ironic_conductor
