Add .tripleo directory to archive list
This directory holds quite valuable information such
as the .tripleo/history file which logs any tripleo command
executed with details like who executed it and in what way.

Change-Id: Idcb93c5b2937f5acb4262c9d8dbb735fdbccdc96

--- a/plugins/collect-logs/vars/default_archives_list.yml
+++ b/plugins/collect-logs/vars/default_archives_list.yml
@@ -38,6 +38,7 @@ archives_list:
     - /home/stack/undercloud-install-*.tar.bzip2
     - /home/stack/*/white_list_*
     - /home/stack/*/black_list_*
+    - /home/stack/.tripleo
     - /home/stack/virt
     - /var/lib/config-data/
     - /var/lib/config-data/puppet-generated/
