No default rhos-release target directory
rhos-release behaves differently when the target directory is specified.
The -t option implies for example exluding dnf/yum module enable actions,
which can lead to package conflicts.

Change-Id: I7185a18b1c9ca35351758aae955b8129040c550e

--- a/infrared/common/roles/rdo-release/defaults/main.yml
+++ b/infrared/common/roles/rdo-release/defaults/main.yml
@@ -1,5 +1,5 @@
 rr_distro_version: "{{ ansible_distribution_version }}"
-rr_target_directory: /etc/yum.repos.d
+rr_target_directory: ''
 rr_use_public_repos: false
 rr_master_release: stein
 rr_ceph_release:
