--- a/plugins/openstack/defaults/topology/nodes/ovb_computehci.yml
+++ b/plugins/openstack/defaults/topology/nodes/ovb_computehci.yml
@@ -1,4 +1,4 @@
-name: ceph
+name: computehci
 image:
     name: "ipxe-boot"
     ssh_user: "root"
@@ -7,6 +7,9 @@ interfaces:
         network: "data"
     nic2:
         network: "management"
+    nic3:
+        network: "external"
+external_network: external
 
 security_groups:
     - general_access
