registry namespace working with different values
osp16 has different namespace default value,
therefore the regexp is not working.

This is quick fix.
Generally not advised to edit yaml/json files with regexp
and not advised to depend on default values instead of the keys.

Change-Id: I52b2a83e3eea6755b618ef91e8eb735d8169a888

--- a/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
+++ b/plugins/tripleo-undercloud/tasks/prepare_uc_images.yml
@@ -99,8 +99,8 @@
           namespace: "{{ registry_namespace | ternary(registry_namespace, container_env['container-image-prepare']['namespace'].split('/')[1] )}}"
       replace:
           path: "{{ working_dir }}/containers-prepare-parameter.yaml"
-          regexp: 'registry.access.redhat.com/rhosp.*'
-          replace: '{{ registry }}/{{ namespace }}'
+          regexp: '^(\s*namespace:).*'
+          replace: "\\1 {{ registry }}/{{ namespace }}"
 
     - name: set name_prefix in containers-prepare-parameter.yaml
       replace:
