yum clean all should be run as root in rhos-release role.
$title.  Note that I'm using become_user as well as it seems to be the
idiom in that file.

Change-Id: I9388b7587f3d8d6b2ecf2ed967c877ad66edfde4

--- a/infrared/common/roles/rhos-release/tasks/main.yml
+++ b/infrared/common/roles/rhos-release/tasks/main.yml
@@ -170,6 +170,8 @@
 
 - name: Clean yum cache on RedHat based distros
   command: yum clean all
+  become: true
+  become_user: root
   when: ansible_os_family == "RedHat"
 
 - name: refresh repository cache
