Fix user permissions for "yum clean all"
"yum clean all" should be root. This patch fixes permissions for this
operation.

Change-Id: Ifebd013b5d79d43b350779c1ef7ee4e99799f48c

--- a/infrared/common/roles/rhos-release/tasks/main.yml
+++ b/infrared/common/roles/rhos-release/tasks/main.yml
@@ -171,6 +171,9 @@
 - name: Clean yum cache on RedHat based distros
   command: yum clean all
   when: ansible_os_family == "RedHat"
+  become: true
+  become_user: root
+
 
 - name: refresh repository cache
   package:
