--- a/infrared/common/roles/rhos-release/tasks/main.yml
+++ b/infrared/common/roles/rhos-release/tasks/main.yml
@@ -172,6 +172,7 @@
   command: yum clean all
   when: ansible_os_family == "RedHat"
   become: true
+  become_user: root
 
 - name: refresh repository cache
   package:
