Set undercloud nameserver only to ipv4 one
By default ctlplane is ipv4. If someone is deploying with ipv6
they have to provide their undercloud.conf anyway. We can't set
ipv6 nameserver on ipv4 subnet.

Change-Id: Idfd816a6b3be2ee3382ece6e2b712f9199209596

--- a/plugins/tripleo-undercloud/configure.yml
+++ b/plugins/tripleo-undercloud/configure.yml
@@ -39,9 +39,9 @@
         set_fact:
             working_dir: "/home/{{ install.user.name }}"
 
-      # We ingore anything with % as it's ipv6 address with local interface
+      # We ingore anything with : as it's ipv6 address and we will only set ipv4 nameserver by default
       - name: get nameservers
-        shell: awk '/%|#/ {next} /nameserver/ { ips=ips $2"," } END {print substr(ips, 1, length(ips)-1)}' /etc/resolv.conf
+        command: awk '/#|:/ {next} /nameserver/ { ips=ips $2"," } END {print substr(ips, 1, length(ips)-1)}' /etc/resolv.conf
         register: nameservers
         changed_when: False
 
